# world-cup-qatar-elt-airflow-bq

./: README.md  pyproject.toml
config/variables/dev/: variables.json
diagram/: elt_in_action_pipeline.excalidraw
world_cup_qatar_elt_bq/dag/: settings.py  world_cup_qatar_elt_bq_dag.py
world_cup_qatar_elt_bq/dag/queries/marts/: team_players_stat.sql
world_cup_qatar_elt_bq/dag/queries/staging/: team_players_stat_raw_cleaned.sql
world_cup_qatar_elt_bq/dag/queries/udfs/: build_players_stats.sql
